fixed select and collapsers

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -90,3 +90,6 @@
     }
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
